static/styles.css
/* ... */
.why_we_do_link a:hover {
  background-color: var(--lightblue);
  transition: background-color 0.4s ease-out;
  color: var(--gray);
}

.about_us_page .split {
  display: flex;
  flex-direction: column;
}

.who_we_are img {
  max-height: 470px;
}

.goal_col_2 p {
  margin-bottom: 2em;
}

.who_we_are .container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.team_person {
  justify-content: center;
  align-items: center;
}

.team_person_split {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.fade_in {
  opacity: 0;
}

.fade_in.in_screen {
  opacity: 1;
  transition: opacity 1s ease-out;
}

.down_in_place {
  opacity: 0;
  transform: translateY(-100%);
}

.down_in_place.in_screen {
  animation: animate_down_h2 1s ease-out;
  animation-fill-mode: forwards;
}

@keyframes animate_down_h2 {
  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

.our_name_logo_div .side_in_place {
  opacity: 0;
  transform: translateX(-25%);
}

.our_name_logo_div .side_in_place.in_screen {
  animation: image_animate_from_left 1s ease-out;
  animation-fill-mode: forwards;
}

@keyframes image_animate_from_left {
  100% {
    opacity: 1;
    transform: translateX(0);
  }
}

.nhs_logo_div .side_in_place {
  opacity: 0;
  transform: translateX(25%);
}

.nhs_logo_div .side_in_place.in_screen {
  animation: image_animate_from_right 1s ease-out;
  animation-fill-mode: forwards;
}

@keyframes image_animate_from_right {
  100% {
    opacity: 1;
    transform: translateX(0);
  }
}

@media (min-width: 740px) {
  .about_us_page .split {
    flex-direction: row;
    align-items: center;
  }

  .about_us_page .split > * {
    flex-basis: 100%;
  }

  .about_us_page .split > * + * {
    margin-left: 2em;
  }

  .about_us_page section {
    padding: 4rem 0;
  }

  .goal .split {
    align-items: normal;
  }

  .sample_day .container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .sample_schedule {
    width: min(100%, 875px);
  }

  .team_person_split {
    display: grid;
    grid-template-columns: 15% 35% 35% 15%;
    justify-content: unset;
  }

  .team_person_img_div {
    grid-column: 2 / 3;
  }
}

@media (max-width: 740px) {
  .our_name_image {
    margin-bottom: 2em;
  }

  .about_us_page h1,
  h2,
  h3,
  h4 {
    text-align: center;
  }

  .why_we_do_link {
    text-align: center;
  }
}

/* --- END ABOUT US STYLES */

/* --- START OUR MISSION STYLES */

.read_more_mission {
  text-align: center;
  font-weight: normal;
  padding-top: 2em;
  padding-bottom: 2em;
  padding-right: 1em;
  padding-left: 1em;
}

.error_container {
  align-content: center;
  padding: 1em;
  margin: 1em;
  display: table-cell;
  vertical-align: middle;
  text-align: center;
}

.article_widget {
  width: 75%;
  height: 75%;
  border: 2px solid var(--gray);
}

.article_widget:hover {
  border: 8px solid var(--lightblue);
  transition: border 0.15s ease-in;
}

@media (max-width: 700px) {
  .error_container {
    padding: 0.35em;
    padding-bottom: 0.35em;
    margin: 0.35em;
  }

  .article_widget {
    width: 100%;
    height: 100%;
  }
}

/* --- END OUR MISSION STYLES */

/* --- START GALLERY STYLES */

.image_gallery_page h1,
.image_gallery_page h3 {
  font-weight: normal;
  animation-name: contact_slide_up_on_load;
  opacity: 0;
  transform: translateY(40%);
  animation-duration: 1s;
  animation-fill-mode: forwards;
  animation-timing-function: ease-out;
  padding: 0 1em;
  color: var(--gray);
}

.image_gallery_page h1 {
  padding-bottom: 0.5em;
}

.image_gallery_welcome_text {
  padding: 3rem 0;
  margin-bottom: 5px;
  text-align: center;
  border-bottom: solid 1px var(--gray);
}

.gallery_images {
  line-height: 0;
  column-count: 3;
  column-gap: 5px;
  width: 100%;
  justify-self: center;
}

.gallery_images img {
  width: 100%;
  height: auto;
  margin-bottom: 5px;
}

@media (min-width: 1001px) {
  .gallery_images {
    column-count: 3;
  }
}

@media (max-width: 1000px) {
  .gallery_images {
    column-count: 3;
  }
}

@media (max-width: 800px) {
  .gallery_images {
    column-count: 2;
  }
}

@media (max-width: 400px) {
  .gallery_images {
    column-count: 1;
  }
}

/* --- END GALLERY STYLES */

/* --- START CONTACT STYLES */

.contact_us_page {
  color: var(--gray);
}

.rest_of_contact_page {
  animation-name: about_fade_in_on_load;
  animation-duration: 2s;
  animation-fill-mode: forwards;
  opacity: 0;
}

.contact_header {
  padding: 3rem 1em;
  text-align: center;
  border-bottom: solid 1px var(--gray);
}

.contact_header h1,
.contact_header h3 {
  animation-name: contact_slide_up_on_load;
  opacity: 0;
  transform: translateY(40%);
  animation-duration: 1s;
  animation-fill-mode: forwards;
  animation-timing-function: ease-out;
}

@keyframes contact_slide_up_on_load {
  100% {
    transform: translateY(0);
    opacity: 1;
  }
}

.contact_header_text {
  font-weight: normal;
  font-size: 28.8px;
}

.contact_header_h3 {
  padding-top: 1em;
  font-weight: normal;
  margin: 0 3rem;
  line-height: 1.6;
}

.nhs_social_contact h3 {
  font-weight: normal;
  padding: 1em;
  text-align: center;
}

.email_contact_div {
  display: grid;
  grid-template-columns: 30% 20% 20% 30%;
  padding: 1em;
  align-items: center;
  margin-top: 1em;
}

.email_contact_div img {
  width: 50px;
  grid-column: 2 / 3;
}

.social_contact_div {
  display: grid;
  grid-template-columns: 30% 20% 20% 30%;
  padding: 1em;
  align-items: center;
}

.twitter_text_link,
.instagram_text_link {
  font-size: 19px;
  text-decoration: underline;
  color: var(--gray);
}

.twitter_text_link:hover,
.instagram_text_link:hover {
  color: var(--darkblue);
  transition: color 0.5s ease-out;
}

.social_contact_div a {
  grid-column: 2 / 3;
}

.social_contact_div img {
  width: 50px;
}
/* ... */

